# findora-scanner

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build_images.yml  check.yml  images.yml  main.yml  pr_check.yml
docs/: api.md  api_v2.md
explorer/: Cargo.toml  Dockerfile
explorer/src/: config.toml  main.rs  utils.rs
explorer/src/service/: address.rs  api.rs  asset.rs  block.rs  blockchain.rs  chain.rs  error.rs  mod.rs  price.rs  staking.rs  tx.rs  tx_search.rs  util.rs  validator.rs
explorer/src/service/v1/: address.rs  api.rs  asset.rs  block.rs  chain.rs  mod.rs  price.rs  staking.rs  transaction.rs  tx.rs  validator.rs
explorer/src/service/v2/: asset.rs  asset_issue.rs  block.rs  claim.rs  define_asset.rs  delegation.rs  error.rs  evm.rs  evm_to_native.rs  mod.rs  native.rs  native_to_evm.rs  other.rs  prism_evm_to_native.rs  prism_native_to_evm.rs  transaction.rs  undelegation.rs
libscanner/: Cargo.toml
libscanner/src/: config.rs
module/: Cargo.toml
module/migrations/: 20220218070358_create_tables.down.sql  20220218070358_create_tables.up.sql  migrate.sql
module/src/: delegations.rs  lib.rs  schema.rs
module/src/config/: explorer_config.rs  mod.rs
module/src/db/: asset.rs  block.rs  block_meta.rs  mod.rs  tx.rs  tx_ref.rs  validator.rs
module/src/display/: address.rs  block.rs
module/src/rpc/: block.rs  delegations.rs  mod.rs  tx.rs  validator.rs
module/src/utils/: crypto.rs
prismer/: Cargo.toml  Dockerfile
prismer/src/: commands.rs  db.rs  error.rs  lib.rs  prismer.rs  rpc.rs  tx.rs  utils.rs
scanner/: Cargo.toml  Dockerfile
scanner/src/: block.rs  command.rs  commands.rs  db.rs  error.rs  lib.rs  main.rs  range_scanner.rs  rpc.rs  scanner.rs  tx.rs  types.rs  util.rs
scanner/src/utils/: block.rs  mod.rs  tx.rs  validator.rs
sql/: create.sql
temp-server/: Cargo.toml  Dockerfile
temp-server/src/: config.toml  main.rs  utils.rs
temp-server/src/module/: config.rs  mod.rs  rpc.rs
