[package]
name = "explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.3.6"
poem-openapi = {version = "1.2.53", features = ["swagger-ui"]}
module = { path = "../module" }
tokio = { version = "1.0", features = ["full"] }
toml = "0.5.8"
anyhow = "1.0.52"
sqlx = { version = "0.5.10", features = [ "runtime-tokio-rustls" , "postgres" ,"chrono" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.19"
env_logger = "0.9.0"
log = "0.4.14"
base64 = "0.10"
bech32 = "0.7.2"
ruc = "1.0"
zei = { git = "https://github.com/FindoraNetwork/zei", tag = "v0.1.4x" }

scanner = {path = "../scanner"}

