[package]
name = "explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.3.36"
poem-openapi = {version = "1.3.30", features = ["swagger-ui"]}
module = { path = "../module" }
tokio = { version = "1.0", features = ["full"] }
toml = "0.5.8"
anyhow = "1.0.52"
sqlx = { version = "0.6.0", features = [ "runtime-tokio-rustls" , "postgres" ,"chrono" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.19"
env_logger = "0.9.0"
log = "0.4.14"
base64 = "0.10"
bech32 = "0.7.2"
ruc = "1.0"
reqwest = "0.11.11"
rlp = { version = "0.5", default-features = false }
ethereum-types = "0.13.1"
ethereum = { version = "0.12.0", default-features = false, features = ["with-serde"] }
sha3 = { version = "0.10.4", default-features = false }
redis = { version = "0.21.6", features = ["async-std-comp"] }
hex = "0.4.3"

zei = { git = "https://github.com/FindoraNetwork/zei", tag = "v0.1.4x" }

scanner = {path = "../scanner"}

