[package]
name = "module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
anyhow = "1.0.52"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
poem-openapi = {version = "1.2.30"}
zei = { git = "https://github.com/FindoraNetwork/zei", tag = "v0.1.4x" }