[package]
name = "module"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
anyhow = "1.0.52"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
poem-openapi = {version = "1.2.30"}

rlp = { version = "0.5", default-features = false }
ethereum-types = "0.12"
ethereum = { version = "0.9.0", default-features = false, features = ["with-serde"] }
sha3 = { version = "0.8", default-features = false }
hex = "0.4.3"
libsecp256k1 = { version = "0.5", features = ["static-context", "hmac"] }
ruc = "1.0"
base64 = "0.10"
bech32 = "0.7.2"

zei = { git = "https://github.com/FindoraNetwork/zei", branch = "stable-main" }
