[package]
name = "prismer"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
ruc = "1.0"
base64 = "0.13.0"
bech32 = "0.7.2"
crossbeam = "0.8"
chrono = "0.4.19"
clap = { version = "3.0.5", features = ["derive"] }
dotenv = "0.15"
env_logger = "0.9.0"
sha2 = "0.10"
hex = "0.4"
module = { path = "../module" }
log = "0.4"
tokio = { version = "1", features = ["full"] }
# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = { version = "*", features = ["vendored"] }
rlp = { version = "0.5", default-features = false }
ethereum-types = "0.13.1"
ethereum = { version = "0.9.0", default-features = false, features = ["with-serde"] }
ethabi = "18.0.0"
zei = { git = "https://github.com/FindoraNetwork/zei", branch = "stable-main" }
[features]
default = []
static-check =[]