[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = { version = "0.7.5", features = ["with-chrono-0_4", "with-serde_json-1"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.19"
base64 = "0.13.0"
clap = { version = "3.0.5", features = ["derive"] }
sha2 = "0.10.1"
hex = "0.4.3"
module = { path = "../module" }
