[package]
name = "temp-server"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.3.6"
poem-openapi = {version = "1.2.53", features = ["swagger-ui"]}
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0.52"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9.0"
reqwest = { version = "0.11", features = ["json"] }
toml = "0.5.8"